# openpyxl-evaluator

./: LICENSE.txt  README.md  pyproject.toml
src/openpyxl_evaluator/: __about__.py  __init__.py  evaluator.py
tests/: __init__.py
tests/openpyxl_evaluator/: evaluator_test.py
