[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openpyxl-evaluator"
dynamic = ["version"]
description = 'Evaluate Formulas in OpenPyXL workbooks '
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = [
  "excel",
  "formula"
]
authors = [
  { name = "Kevin Fischer", email = "kfischer_okarin@yahoo.co.jp" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "openpyxl"
]

[project.urls]
Documentation = "https://github.com/kfischer-okarin/openpyxl-evaluator#readme"
Issues = "https://github.com/kfischer-okarin/openpyxl-evaluator/issues"
Source = "https://github.com/kfischer-okarin/openpyxl-evaluator"

[tool.hatch.version]
path = "src/openpyxl_evaluator/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/openpyxl_evaluator tests}"

[tool.coverage.run]
source_pkgs = ["openpyxl_evaluator", "tests"]
branch = true
parallel = true
omit = [
  "src/openpyxl_evaluator/__about__.py",
]

[tool.coverage.paths]
openpyxl_evaluator = ["src/openpyxl_evaluator", "*/openpyxl-evaluator/src/openpyxl_evaluator"]
tests = ["tests", "*/openpyxl-evaluator/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
